--- a/index.html
+++ b/index.html
@@ -3902,8 +3902,9 @@
       
     </div>
     <div class="col-12 col-lg-8">
-      <p>Since my PhD, I have advised several students and colleagues about conducting behavioural and EEG experiments, and about data management, preprocessing and analysis. Furthermore, during my postdoc, I have co-supervised a master's thesis. Finally, I am a <a href="https://carpentries.org/instructors">Certified Carpentries Instructor</a>, and have led several <a href="https://pablobernabeu.github.io/#workshops">workshops on data analysis using R</a>.</p>
-<p>My PhD scholarship was teaching-based, so I contributed to the curriculum of the Lancaster University Department of Psychology for 180 hours a year. Specifically, each year, I led 30 seminars and marked 80 essays in developmental, cognitive and social psychology, while also helping in 30 statistics lab sessions. This activity is detailed below.</p>
+      <p>Since my PhD, I have advised several students and colleagues about conducting behavioural and EEG experiments, and about data management, preprocessing and analysis. For instance, during my postdoc, I have co-supervised a master's thesis and three research assistantships. Furthermore, I am a <a href="https://carpentries.org/instructors">Certified Carpentries Instructor</a>, and have led several <a href="https://pablobernabeu.github.io/#workshops">workshops on data analysis using R</a>.</p>
+<p>My PhD scholarship was teaching-based, so I contributed to the curriculum of the Lancaster University Department of Psychology for 180 hours a year. Specifically, each year, I led 30 seminars and marked 80 essays in developmental, cognitive and social psychology, while also helping in 30 statistics lab sessions. Furthermore, I was a representative for graduate teaching assistants in my department for a year. Earlier in my career, I <a href="/#other-work">taught English to secondary-education students in Spain</a>, and <a href="/#BA-degree">taught Spanish to adults in Lithuania</a>.</p>
+<p>My educational engagement throughout my PhD is detailed below.</p>
 <table>
 <thead>
 <tr>
@@ -3974,8 +3975,6 @@
 </tr>
 </tbody>
 </table>
-<p>During my PhD, I was also a representative for graduate teaching assistants in my department for a year.</p>
-<p>Earlier in my career, I <a href="/#other-work">taught English to secondary-education students in Spain</a>, and <a href="/#BA-degree">taught Spanish to adults in Lithuania</a>.</p>
 
     </div>
   
