--- a/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
+++ b/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
@@ -776,7 +776,7 @@
 </div>
 <div id="acknowledgements" class="section level4">
 <h4>Acknowledgements</h4>
-<p>Below, we gratefully acknowledge some of the invaluable help and advice we received.</p>
+<p>Below, we gratefully acknowledge some of the invaluable help and advice we received in the areas indicated below.</p>
 <ul>
 <li><p>My Ngoc Giang Hoang (piloting of sessions, recruitment of participants and collection of data)</p></li>
 <li><p>Mona Kirkness Fossum (translation of materials)</p></li>
