--- a/applications-and-dashboards/experimental-data-simulation/index.html
+++ b/applications-and-dashboards/experimental-data-simulation/index.html
@@ -538,7 +538,7 @@
 
 
   
-  <span>Bernabeu, P., &amp; Lynott, D.</span>
+  <span><strong>Bernabeu, P.</strong>, &amp; Lynott, D.</span>
 
   </span>
   
