--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
 
 
   
-  <span>González Alonso, J., Bernabeu, P., Silva, G., DeLuca, V., Poch, C., Ivanova, I., &amp; Rothman, J.</span>
+  <span>González Alonso, J., <strong>Bernabeu, P.</strong>, Silva, G., DeLuca, V., Poch, C., Ivanova, I., &amp; Rothman, J.</span>
 
   </span>
   
@@ -853,7 +853,7 @@
 
 
   
-  <span>Chen, S.-C., Buchanan, E. M., Kekecs, Z., Miller, J. K., Szabelska, A., Aczel, B., Bernabeu, P., Forscher, P. S., Szuts, A., Vally, D. Z., Al-Hoorie, A. H., Helmy, M., Silva, C. S. A. da, Silva, L. O. da, Moraes, Y. L. de, Hsu, R. M. C. S., Mafra, A. L., Valentova, J. V., Varella, M. A. C., … Chartier, C. R.</span>
+  <span>Chen, S.-C., Buchanan, E. M., Kekecs, Z., Miller, J. K., Szabelska, A., Aczel, B., <strong>Bernabeu, P.</strong>, Forscher, P. S., Szuts, A., Vally, D. Z., Al-Hoorie, A. H., Helmy, M., Silva, C. S. A. da, Silva, L. O. da, Moraes, Y. L. de, Hsu, R. M. C. S., Mafra, A. L., Valentova, J. V., Varella, M. A. C., … Chartier, C. R.</span>
 
   </span>
   
@@ -1038,7 +1038,7 @@
 
 
   
-  <span>Bernabeu, P., Lynott, D., &amp; Connell, L.</span>
+  <span><strong>Bernabeu, P.</strong>, Lynott, D., &amp; Connell, L.</span>
 
   </span>
   
@@ -1250,7 +1250,7 @@
 
 
   
-  <span>Bernabeu, P.</span>
+  <span><strong>Bernabeu, P.</strong></span>
 
   </span>
   
@@ -1462,7 +1462,7 @@
 
 
   
-  <span>Bernabeu, P., Lynott, D., &amp; Connell, L.</span>
+  <span><strong>Bernabeu, P.</strong>, Lynott, D., &amp; Connell, L.</span>
 
   </span>
   
@@ -1623,7 +1623,7 @@
 
 
   
-  <span>Bernabeu, P., &amp; Tillman, R.</span>
+  <span><strong>Bernabeu, P.</strong>, &amp; Tillman, R.</span>
 
   </span>
   
@@ -1792,7 +1792,7 @@
 
 
   
-  <span>Bernabeu, P.</span>
+  <span><strong>Bernabeu, P.</strong></span>
 
   </span>
   
@@ -1985,7 +1985,7 @@
 
 
   
-  <span>Bernabeu, P., Willems, R. M., &amp; Louwerse, M. M.</span>
+  <span><strong>Bernabeu, P.</strong>, Willems, R. M., &amp; Louwerse, M. M.</span>
 
   </span>
   
@@ -2240,7 +2240,7 @@
 
 
   
-  <span>Bernabeu, P.</span>
+  <span><strong>Bernabeu, P.</strong></span>
 
   </span>
   
@@ -2479,7 +2479,7 @@
 
 
   
-  <span>Bernabeu, P., &amp; Vogt, P.</span>
+  <span><strong>Bernabeu, P.</strong>, &amp; Vogt, P.</span>
 
   </span>
   
@@ -2812,7 +2812,7 @@
 
 
   
-  <span>Bernabeu, P., &amp; Lynott, D.</span>
+  <span><strong>Bernabeu, P.</strong>, &amp; Lynott, D.</span>
 
   </span>
   
@@ -3598,7 +3598,7 @@
     <p>After completing a research master's, I became a PhD student and graduate teaching assistant in Psychology at Lancaster University. In my <a href="/publication/pablo-bernabeu-2022-phd-thesis">thesis</a>, I investigated how conceptual processing—that is, the comprehension of the meaning of words—is supported by linguistic and sensorimotor brain systems, and how research on this topic is influenced by methodological aspects such as the operationalisation of variables and the sample size of experiments.</p>
 <p>Currently, I am a postdoctoral fellow at UiT The Arctic University of Norway. I work at the <a href="https://en.uit.no/enhet/isk">Department of Language and Culture</a>, and specifically within the <a href="https://site.uit.no/polar">PoLaR Lab</a> and <a href="https://uit.no/research/clabl"><span style = "white-space: nowrap;">C-LaBL</span></a>. As the local manager of the <a href="https://app.cristin.no/projects/show.jsf?id=2559611"><strong>LESS Project</strong> (Language Economy through Transfer Source Selectivity)</a>, I work on a six-session longitudinal study that investigates how bilingual people acquire an additional language, how this process is influenced by the characteristics of the languages, and how the process is instantiated in the brain. As part of this work so far, I contributed to the design of our study, developed most of the materials for our study and for a partner study in Spain, documented the creation of the materials and pretested them, wrote a preregistration, recruited participants, designed the protocol for the electroencephalography (EEG) sessions, trained students and research assistants in this protocol and in EEG more generally, set up and managed an EEG lab, conducted many of the sessions and oversaw those conducted by our research assistants, monitored the longitudinal progress per participant, presented the design of the study at conferences, preprocessed the EEG and behavioural data in collaboration with research assistants, and performed the statistical analysis.</p>
 <p>I am also interested in the relationships between language and other cognitive domains, as well as in the origins and evolution of language.</p>
-<p>I employ a range of tools, including behavioural and electroencephalographic experiments, corpus analysis, statistics and programming. The materials, the data and the analyses produced in my research are available at <a href="https://osf.io/25u3x">https://osf.io/25u3x</a>.</p>
+<p>I employ a range of tools, including behavioural and electroencephalographic experiments, corpus analysis, statistics and programming. The materials, the data and the analyses used in my research are available at <a href="https://osf.io/25u3x">https://osf.io/25u3x</a>.</p>
 <p>My CV is <a href="/cv">available here</a>.</p>
 
 
@@ -3898,11 +3898,11 @@
 <div class="row">
   
     <div class="col-12 col-lg-4 section-heading">
-      <h1>Teaching and supervision</h1>
+      <h1>Teaching, supervision and advice</h1>
       
     </div>
     <div class="col-12 col-lg-8">
-      <p>Since my PhD, I have advised several students and colleagues about conducting behavioural and EEG experiments, and about data management, preprocessing and analysis. For instance, during my postdoc, I have co-supervised a master's thesis and three research assistantships. Furthermore, I am a <a href="https://carpentries.org/instructors">Certified Carpentries Instructor</a>, and have led several <a href="https://pablobernabeu.github.io/#workshops">workshops on data analysis using R</a>.</p>
+      <p>Since completing my PhD, I have advised numerous students and colleagues on designing and conducting behavioral and EEG experiments, as well as on data management, preprocessing, and analysis. For instance, during my PhD, I supervised an undergraduate internship. During my postdoc, I have supervised three research assistantships and co-supervised a master's thesis. Furthermore, I am a <a href="https://carpentries.org/instructors">Certified Carpentries Instructor</a>, and have led several <a href="https://pablobernabeu.github.io/#workshops">workshops on data analysis using R</a>.</p>
 <p>My PhD scholarship was teaching-based, so I contributed to the curriculum of the Lancaster University Department of Psychology for 180 hours a year. Specifically, each year, I led 30 seminars and marked 80 essays in developmental, cognitive and social psychology, while also helping in 30 statistics lab sessions. Furthermore, I was a representative for graduate teaching assistants in my department for a year. Earlier in my career, I <a href="/#other-work">taught English to secondary-education students in Spain</a>, and <a href="/#BA-degree">taught Spanish to adults in Lithuania</a>.</p>
 <p>My educational engagement throughout my PhD is detailed below.</p>
 <table>
