--- a/publication/bernabeu_vogt2015/index.html
+++ b/publication/bernabeu_vogt2015/index.html
@@ -272,7 +272,7 @@
   
   "author": {
     "@type": "Person",
-    "name": "Bernabeu, P., \u0026 Vogt, P."
+    "name": "**Bernabeu, P.**, \u0026 Vogt, P."
   },
   
   "publisher": {
@@ -589,7 +589,7 @@
 
 
   
-  <span>Bernabeu, P., &amp; Vogt, P.</span>
+  <span><strong>Bernabeu, P.</strong>, &amp; Vogt, P.</span>
 
   </span>
   
