--- a/publication/index.html
+++ b/publication/index.html
@@ -654,7 +654,7 @@
 
 
   
-  <span>González Alonso, J., Bernabeu, P., Silva, G., DeLuca, V., Poch, C., Ivanova, I., &amp; Rothman, J.</span>
+  <span>González Alonso, J., <strong>Bernabeu, P.</strong>, Silva, G., DeLuca, V., Poch, C., Ivanova, I., &amp; Rothman, J.</span>
 
   </span>
   (2024).
@@ -761,7 +761,7 @@
 
 
   
-  <span>Chen, S.-C., Buchanan, E. M., Kekecs, Z., Miller, J. K., Szabelska, A., Aczel, B., Bernabeu, P., Forscher, P. S., Szuts, A., Vally, D. Z., Al-Hoorie, A. H., Helmy, M., Silva, C. S. A. da, Silva, L. O. da, Moraes, Y. L. de, Hsu, R. M. C. S., Mafra, A. L., Valentova, J. V., Varella, M. A. C., … Chartier, C. R.</span>
+  <span>Chen, S.-C., Buchanan, E. M., Kekecs, Z., Miller, J. K., Szabelska, A., Aczel, B., <strong>Bernabeu, P.</strong>, Forscher, P. S., Szuts, A., Vally, D. Z., Al-Hoorie, A. H., Helmy, M., Silva, C. S. A. da, Silva, L. O. da, Moraes, Y. L. de, Hsu, R. M. C. S., Mafra, A. L., Valentova, J. V., Varella, M. A. C., … Chartier, C. R.</span>
 
   </span>
   (2023).
@@ -864,7 +864,7 @@
 
 
   
-  <span>Bernabeu, P., Lynott, D., &amp; Connell, L.</span>
+  <span><strong>Bernabeu, P.</strong>, Lynott, D., &amp; Connell, L.</span>
 
   </span>
   (2022).
@@ -994,7 +994,7 @@
 
 
   
-  <span>Bernabeu, P.</span>
+  <span><strong>Bernabeu, P.</strong></span>
 
   </span>
   (2022).
@@ -1124,7 +1124,7 @@
 
 
   
-  <span>Bernabeu, P., Lynott, D., &amp; Connell, L.</span>
+  <span><strong>Bernabeu, P.</strong>, Lynott, D., &amp; Connell, L.</span>
 
   </span>
   (2021).
@@ -1203,7 +1203,7 @@
 
 
   
-  <span>Bernabeu, P., &amp; Tillman, R.</span>
+  <span><strong>Bernabeu, P.</strong>, &amp; Tillman, R.</span>
 
   </span>
   (2019).
@@ -1290,7 +1290,7 @@
 
 
   
-  <span>Bernabeu, P.</span>
+  <span><strong>Bernabeu, P.</strong></span>
 
   </span>
   (2018).
@@ -1401,7 +1401,7 @@
 
 
   
-  <span>Bernabeu, P., Willems, R. M., &amp; Louwerse, M. M.</span>
+  <span><strong>Bernabeu, P.</strong>, Willems, R. M., &amp; Louwerse, M. M.</span>
 
   </span>
   (2017).
@@ -1574,7 +1574,7 @@
 
 
   
-  <span>Bernabeu, P.</span>
+  <span><strong>Bernabeu, P.</strong></span>
 
   </span>
   (2017).
@@ -1731,7 +1731,7 @@
 
 
   
-  <span>Bernabeu, P., &amp; Vogt, P.</span>
+  <span><strong>Bernabeu, P.</strong>, &amp; Vogt, P.</span>
 
   </span>
   (2015).
