--- a/publication/language-vision-conceptual-processing/index.html
+++ b/publication/language-vision-conceptual-processing/index.html
@@ -272,7 +272,7 @@
   
   "author": {
     "@type": "Person",
-    "name": "Bernabeu, P., Lynott, D., \u0026 Connell, L."
+    "name": "**Bernabeu, P.**, Lynott, D., \u0026 Connell, L."
   },
   
   "publisher": {
@@ -589,7 +589,7 @@
 
 
   
-  <span>Bernabeu, P., Lynott, D., &amp; Connell, L.</span>
+  <span><strong>Bernabeu, P.</strong>, Lynott, D., &amp; Connell, L.</span>
 
   </span>
   
