--- a/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
+++ b/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
@@ -272,7 +272,7 @@
   
   "author": {
     "@type": "Person",
-    "name": "González Alonso, J., Bernabeu, P., Silva, G., DeLuca, V., Poch, C., Ivanova, I., \u0026 Rothman, J."
+    "name": "González Alonso, J., **Bernabeu, P.**, Silva, G., DeLuca, V., Poch, C., Ivanova, I., \u0026 Rothman, J."
   },
   
   "publisher": {
@@ -591,7 +591,7 @@
 
 
   
-  <span>González Alonso, J., Bernabeu, P., Silva, G., DeLuca, V., Poch, C., Ivanova, I., &amp; Rothman, J.</span>
+  <span>González Alonso, J., <strong>Bernabeu, P.</strong>, Silva, G., DeLuca, V., Poch, C., Ivanova, I., &amp; Rothman, J.</span>
 
   </span>
   
