--- a/publication/bernabeu-2017-mphil-thesis/index.html
+++ b/publication/bernabeu-2017-mphil-thesis/index.html
@@ -272,7 +272,7 @@
   
   "author": {
     "@type": "Person",
-    "name": "Bernabeu, P."
+    "name": "**Bernabeu, P.**"
   },
   
   "publisher": {
@@ -591,7 +591,7 @@
 
 
   
-  <span>Bernabeu, P.</span>
+  <span><strong>Bernabeu, P.</strong></span>
 
   </span>
   
