--- a/publication/bernabeu-etal-2017/index.html
+++ b/publication/bernabeu-etal-2017/index.html
@@ -272,7 +272,7 @@
   
   "author": {
     "@type": "Person",
-    "name": "Bernabeu, P., Willems, R. M., \u0026 Louwerse, M. M."
+    "name": "**Bernabeu, P.**, Willems, R. M., \u0026 Louwerse, M. M."
   },
   
   "publisher": {
@@ -591,7 +591,7 @@
 
 
   
-  <span>Bernabeu, P., Willems, R. M., &amp; Louwerse, M. M.</span>
+  <span><strong>Bernabeu, P.</strong>, Willems, R. M., &amp; Louwerse, M. M.</span>
 
   </span>
   
