--- a/publication/bernabeu-tillman-2019/index.html
+++ b/publication/bernabeu-tillman-2019/index.html
@@ -272,7 +272,7 @@
   
   "author": {
     "@type": "Person",
-    "name": "Bernabeu, P., \u0026 Tillman, R."
+    "name": "**Bernabeu, P.**, \u0026 Tillman, R."
   },
   
   "publisher": {
@@ -591,7 +591,7 @@
 
 
   
-  <span>Bernabeu, P., &amp; Tillman, R.</span>
+  <span><strong>Bernabeu, P.</strong>, &amp; Tillman, R.</span>
 
   </span>
   
