--- a/publication/dutch-modality-exclusivity-norms-for-336-properties-and-411-concepts/index.html
+++ b/publication/dutch-modality-exclusivity-norms-for-336-properties-and-411-concepts/index.html
@@ -272,7 +272,7 @@
   
   "author": {
     "@type": "Person",
-    "name": "Bernabeu, P."
+    "name": "**Bernabeu, P.**"
   },
   
   "publisher": {
@@ -591,7 +591,7 @@
 
 
   
-  <span>Bernabeu, P.</span>
+  <span><strong>Bernabeu, P.</strong></span>
 
   </span>
   
