--- a/index.html
+++ b/index.html
@@ -3902,7 +3902,7 @@
       
     </div>
     <div class="col-12 col-lg-8">
-      <p>Since completing my PhD, I have advised numerous students and colleagues on designing and conducting behavioral and EEG experiments, as well as on data management, preprocessing, and analysis. For instance, during my PhD, I supervised an undergraduate internship. During my postdoc, I have supervised three research assistantships and co-supervised a master's thesis. Furthermore, I am a <a href="https://carpentries.org/instructors">Certified Carpentries Instructor</a>, and have led several <a href="https://pablobernabeu.github.io/#workshops">workshops on data analysis using R</a>.</p>
+      <p>Since completing my PhD, I have advised numerous students and colleagues on designing and conducting behavioral and EEG experiments, as well as on data management, preprocessing, and analysis. For instance, during my PhD, I supervised an undergraduate internship. During my postdoc, I have supervised three research assistantships and co-supervised a master's thesis. Furthermore, I am a <a href="https://carpentries.org/instructors">certified Carpentries Instructor</a>, and have led several <a href="https://pablobernabeu.github.io/#workshops">workshops on data analysis using R</a>.</p>
 <p>My PhD scholarship was teaching-based, so I contributed to the curriculum of the Lancaster University Department of Psychology for 180 hours a year. Specifically, each year, I led 30 seminars and marked 80 essays in developmental, cognitive and social psychology, while also helping in 30 statistics lab sessions. Furthermore, I was a representative for graduate teaching assistants in my department for a year. Earlier in my career, I <a href="/#other-work">taught English to secondary-education students in Spain</a>, and <a href="/#BA-degree">taught Spanish to adults in Lithuania</a>.</p>
 <p>My educational engagement throughout my PhD is detailed below.</p>
 <table>
@@ -4254,7 +4254,7 @@
 </tr>
 <tr>
 <td><strong>Languages</strong></td>
-<td>English: C1. Spanish: native. Catalan: B1. French: B1. Dutch: A2. Italian: A2, Norwegian: A1</td>
+<td><em>Proficient</em>: English, Spanish. <em>Intermediate</em>: Catalan, French. <em>Basic</em>: Dutch, Italian, Norwegian</td>
 </tr>
 </tbody>
 </table>
