--- a/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
+++ b/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
@@ -778,12 +778,12 @@
 <h4>Acknowledgements</h4>
 <p>Below, we gratefully acknowledge some of the invaluable help and advice we received in various areas.</p>
 <ul>
-<li><p>My Ngoc Giang Hoang (piloting of sessions, recruitment of participants and collection of data)</p></li>
+<li><p>My Ngoc Giang Hoang (recruitment of participants and piloting of sessions)</p></li>
 <li><p>Mona Kirkness Fossum (translation of materials)</p></li>
 <li><p>Gaute Berglund, Anders Gabrielsen, Tekabe Legesse Feleke (piloting of sessions)</p></li>
 <li><p>Teodóra Vékony (alternating serial reaction time task)</p></li>
-<li><p>Björn Lundquist (creation of task in OpenSesame)</p></li>
-<li><p>Antonio Fábregas, Natalia Mitrofanova, Yulia Rodina, Marit Westergaard (design of study, translation of materials and recruitment of participants)</p></li>
+<li><p>Björn Lundquist (implementation in OpenSesame)</p></li>
+<li><p>Antonio Fábregas, Natalia Mitrofanova, Yulia Rodina, Marit Westergaard (design and translation of materials and recruitment of participants)</p></li>
 <li><p>Merete Anderssen, Fatih Bayram (recruitment of participants)</p></li>
 </ul>
 </div>
