--- a/index.html
+++ b/index.html
@@ -4311,7 +4311,12 @@
       
     </div>
     <div class="col-12 col-lg-8">
-      <h3 id="span-stylecolorgrey-font-size702024-spannbsp-lowering-impedance-in-electroencephalography-using-a-blunt-needle-electrolyte-gel-and-wiggling2024lowering-impedance-in-electroencephalography-using-a-blunt-needle-electrolyte-gel-and-wiggling"><span style='color:grey; font-size:70%;'>2024 ·</span>  <a href="/2024/lowering-impedance-in-electroencephalography-using-a-blunt-needle-electrolyte-gel-and-wiggling">Lowering impedance in electroencephalography using a blunt needle, electrolyte gel and wiggling</a></h3>
+      <h3 id="span-stylecolorgrey-font-size702024-spannbsp-naming-gorilla-files-in-the-less-project"><span style='color:grey; font-size:70%;'>2024 ·</span>  Naming Gorilla files in the LESS Project</h3>
+<div style = "position: relative; margin-top: 20px; padding-top: 56.25%; margin-bottom: -25px;">
+<iframe src="https://www.youtube-nocookie.com/embed/zkaSoP4jKHU" frameborder="0" allowfullscreen
+style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
+</div>
+<h3 id="span-stylecolorgrey-font-size702024-spannbsp-lowering-impedance-in-electroencephalography-using-a-blunt-needle-electrolyte-gel-and-wiggling2024lowering-impedance-in-electroencephalography-using-a-blunt-needle-electrolyte-gel-and-wiggling"><span style='color:grey; font-size:70%;'>2024 ·</span>  <a href="/2024/lowering-impedance-in-electroencephalography-using-a-blunt-needle-electrolyte-gel-and-wiggling">Lowering impedance in electroencephalography using a blunt needle, electrolyte gel and wiggling</a></h3>
 <div style = "position: relative; margin-top: 20px; padding-top: 56.25%; margin-bottom: -25px;">
 <iframe src="https://www.youtube-nocookie.com/embed/4KLtp-WnOOo" frameborder="0" allowfullscreen
 style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
