--- a/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
+++ b/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
@@ -765,7 +765,6 @@
 <div id="materials" class="section level4">
 <h4>Materials</h4>
 <p>Documentation practices and open-source software (namely, R and OpenSesame) were used to prepare the materials for the current study. In previous similar studies, the materials have not generally been very Findable, Accessible, Interoperable or Reusable (Cross et al., 2021; González Alonso et al., 2020; Mitrofanova et al., 2023; Morgan-Short et al., 2012; Pereira Soares et al., 2022). In contrast, in our current study, the stimuli were prepared in R using a modular framework that consisted of interoperable components (see <a href="https://osf.io/974k8" class="uri">https://osf.io/974k8</a>). The modularity of this method facilitates the expansion of the materials within the same languages and to other languages. Specifically, the minimal components of each language were contained in a base file in the ‘stimulus_preparation’ folder. Furthermore, for the creation of the final stimuli, several controls were exerted to prevent spurious effects. For instance, gender and number were counterbalanced across experimental conditions, words were rotated across grammatical properties and sessions, and frequency of occurrence was controlled. The final stimuli can be recreated using the script ‘compile_all_stimuli.R’, and the resulting stimuli are saved to the ‘session_materials’ folder. Furthermore, the final stimuli were presented using OpenSesame, which is a free-of-charge software supporting experiments in the social sciences. The implementation of the four lab-based sessions in OpenSesame involved the use of conditions for controlling the engagement of certain items. In conclusion, the materials of the current study are accessible, and the workflow is reproducible. As a result, the final materials are testable, modifiable and expandable, improving long-term efficiency.</p>
-<p>The vast majority of the materials used in these studies were created, documented and curated by Pablo Bernabeu, who can be contacted at <a href="mailto:pcbernabeu@gmail.com" class="email">pcbernabeu@gmail.com</a>.</p>
 <div id="references" class="section level5">
 <h5>References</h5>
 <p>Cross, Z. R., Zou-Williams, L., Wilkinson, E. M., Schlesewsky, M., &amp; Bornkessel-Schlesewsky, I. (2021). Mini Pinyin: A modified miniature language for studying language learning and incremental sentence processing. <em>Behavior Research Methods, 53</em>(3), 1218–1239. <a href="https://doi.org/10.3758/s13428-020-01473-6" class="uri">https://doi.org/10.3758/s13428-020-01473-6</a></p>
@@ -775,9 +774,10 @@
 <p>Pereira Soares, S. M., Kupisch, T., &amp; Rothman, J. (2022). Testing potential transfer effects in heritage and adult L2 bilinguals acquiring a mini grammar as an additional language: An ERP approach. <em>Brain Sciences, 12</em>(5), Article 5. <a href="https://doi.org/10.3390/brainsci12050669" class="uri">https://doi.org/10.3390/brainsci12050669</a></p>
 </div>
 </div>
-<div id="acknowledgements" class="section level4">
-<h4>Acknowledgements</h4>
-<p>Below, we gratefully acknowledge some of the invaluable help and advice we received in various areas.</p>
+<div id="contributors-and-acknowledgements" class="section level4">
+<h4>Contributors and acknowledgements</h4>
+<p>The present materials were created, documented and curated by Pablo Bernabeu, Gabriella Silva, Jorge González Alonso, My Ngoc Giang Hoang, Jason Rothman, Vincent DeLuca, Claudia Poch and Iva Ivanova.</p>
+<p>We also received invaluable help and advice in various regards, as we gratefully acknowledge below. Any oversights or errors that remain are entirely our own and should not reflect on the generosity and expertise of those who assisted us.</p>
 <ul>
 <li><p>My Ngoc Giang Hoang (recruitment of participants and piloting of sessions)</p></li>
 <li><p>Mona Kirkness Fossum (translation of materials)</p></li>
