--- a/index.html
+++ b/index.html
@@ -3196,7 +3196,7 @@
   
     <div class="col-12 col-lg-4 section-heading">
       <h1>Workshops</h1>
-      <p><span style='font-size:80%;'>Introduction to &lt;iclass='fa-brands fa-r-project’ aria-label='R&rsquo;»</i>, statistics, visualisation, reproducible documents, web applications and dashboards, HTML, CSS, web hosting (<a href="/2020/data-is-present-workshops-and-datathons/">further details</a>).</span></p>
+      <p><span style='font-size:80%;'>Introduction to <i class='fa-brands fa-r-project' aria-label='R'></i>, statistics, visualisation, reproducible documents, web applications and dashboards, HTML, CSS, web hosting (<a href="/2020/data-is-present-workshops-and-datathons/">further details</a>).</span></p>
     </div>
     <div class="col-12 col-lg-8">
       <table>
@@ -3223,7 +3223,7 @@
 </tr>
 <tr>
 <td align="center">May 2020</td>
-<td><a href="/PDF/LU-May-Markdown-workshop-programme.pdf">R Markdown</a></td>
+<td><a href="/PDF/LU-May-Markdown-workshop-programme.pdf"><i class='fa-brands fa-r-project' aria-label='R'></i> Markdown</a></td>
 <td>Lancaster University	[online]</td>
 <td align="center"></td>
 </tr>
@@ -4466,7 +4466,7 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 <div class="row">
   <div class="col-12 col-lg-4 section-heading">
     <h1>Blog and resources</h1>
-    <p>Short essays, tutorials, inquiries, and functions for the implementation of experiments, data analysis and other purposes.<br><span style='font-size:80%;'>Some of the <a href="/categories/r/">posts involving &lt;iclass='fa-brands fa-r-project’ aria-label='R&rsquo;»</i> code</a> were republished on <a href="https://www.r-bloggers.com">R-bloggers</a>, <a href="https://rweekly.org/">R Weekly</a>, <a href="https://www.datasciencecentral.com/">Data Science Central</a> and <a href="https://dev.to/">dev.to</a>.</span></p>
+    <p>Short essays, tutorials, inquiries, and functions for the implementation of experiments, data analysis and other purposes.<br><span style='font-size:80%;'>Some of the <a href="/categories/r/">posts involving <i class='fa-brands fa-r-project' aria-label='R'></i> code</a> were republished on <a href="https://www.r-bloggers.com">R-bloggers</a>, <a href="https://rweekly.org/">R Weekly</a>, <a href="https://www.datasciencecentral.com/">Data Science Central</a> and <a href="https://dev.to/">dev.to</a>.</span></p>
   </div>
   <div class="col-12 col-lg-8">
 
