--- a/applications-and-dashboards/bernabeu-etal-2017-modalityswitch/index.html
+++ b/applications-and-dashboards/bernabeu-etal-2017-modalityswitch/index.html
@@ -619,7 +619,7 @@
     
   
 <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/pablobernabeu/Modality-switch-effects-emerge-early-and-increase-throughout-conceptual-processing/tree/master/Shiny-app" target="_blank" rel="noopener">
-  Dataset
+  Data
 </a>
 
 
