--- a/applications-and-dashboards/butterfly-species-richness-in-la/index.html
+++ b/applications-and-dashboards/butterfly-species-richness-in-la/index.html
@@ -613,7 +613,7 @@
     
   
 <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/jcoliver/bioscan" target="_blank" rel="noopener">
-  Dataset
+  Data
 </a>
 
 
