--- a/presentation/investigating-language-learning-and-morphosyntactic-transfer-longitudinally-using-artificial-languages/index.html
+++ b/presentation/investigating-language-learning-and-morphosyntactic-transfer-longitudinally-using-artificial-languages/index.html
@@ -638,6 +638,22 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="https://osf.io/974k8" target="_blank" rel="noopener">
+  Code
+</a>
+
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="https://osf.io/974k8" target="_blank" rel="noopener">
+  Data
+</a>
 
 
 
