--- a/publication/bernabeu-2017-mphil-thesis/index.html
+++ b/publication/bernabeu-2017-mphil-thesis/index.html
@@ -691,7 +691,7 @@
     
   
 <a class="btn btn-outline-primary my-1 mr-1" href="https://osf.io/97unm/" target="_blank" rel="noopener">
-  Dataset
+  Data
 </a>
 
 
