--- a/publication/chen-etal-inprep/index.html
+++ b/publication/chen-etal-inprep/index.html
@@ -683,7 +683,7 @@
     
   
 <a class="btn btn-outline-primary my-1 mr-1" href="https://osf.io/e428p/" target="_blank" rel="noopener">
-  Dataset
+  Data
 </a>
 
 
