--- a/publication/pablo-bernabeu-2022-phd-thesis/index.html
+++ b/publication/pablo-bernabeu-2022-phd-thesis/index.html
@@ -689,7 +689,7 @@
     
   
 <a class="btn btn-outline-primary my-1 mr-1" href="https://osf.io/gt5uf" target="_blank" rel="noopener">
-  Dataset
+  Data
 </a>
 
 
