--- a/applications-and-dashboards/bernabeu-2018-modalitynorms/index.html
+++ b/applications-and-dashboards/bernabeu-2018-modalitynorms/index.html
@@ -613,7 +613,7 @@
     
   
 <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/pablobernabeu/Dutch-modality-exclusivity-norms-Bernabeu-2018" target="_blank" rel="noopener">
-  Dataset
+  Data
 </a>
 
 
