--- a/publication/language-vision-conceptual-processing/index.html
+++ b/publication/language-vision-conceptual-processing/index.html
@@ -689,7 +689,7 @@
     
   
 <a class="btn btn-outline-primary my-1 mr-1" href="https://osf.io/ueryq" target="_blank" rel="noopener">
-  Dataset
+  Data
 </a>
 
 
