--- a/presentation/2020-10-08-reproducibilidad-en-torno-a-una-aplicacion-web/index.html
+++ b/presentation/2020-10-08-reproducibilidad-en-torno-a-una-aplicacion-web/index.html
@@ -673,10 +673,12 @@
 </div>
 <div id="vídeo-y-filminas" class="section level3">
 <h3>Vídeo y filminas</h3>
-<iframe width="560" height="315" style="margin-top:20px; margin-bottom:5px;" src="https://www.youtube-nocookie.com/embed/1njLOAWqLPM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+<center>
+<iframe width="700" height="394" style="margin-top:20px; margin-bottom:5px;" src="https://www.youtube-nocookie.com/embed/1njLOAWqLPM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
-<iframe src="https://www.slideshare.net/slideshow/embed_code/key/AlE6wv2USddNP6" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="margin-top:20px; border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen>
+<iframe src="https://www.slideshare.net/slideshow/embed_code/key/AlE6wv2USddNP6" width="700" height="394" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="margin-top:20px; border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen>
 </iframe>
+</center>
 </div>
 
     </div>
