--- a/cv/index.html
+++ b/cv/index.html
@@ -71,6 +71,7 @@
         overflow-y = 'hidden'
         allowfullscreen
         webkitallowfullscreen
+        loading = 'lazy'
         >
       </div>
     
