--- a/index.html
+++ b/index.html
@@ -4524,7 +4524,7 @@ style = "position:absolute; top:0; left:0; width:95%; height:95%;"></iframe>
 
     
     <div class="article-style">
-      Integrating Speech and Gesture Processing for Linguistic Analysis using PythonUnderstanding the interplay between spoken language and …
+      Understanding the interplay between speech and gesture is crucial for linguistic and cognitive research. The current prototype, …
     </div>
     
 
