--- a/cv/index.html
+++ b/cv/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=../cv.pdf">
-    <title>Redirecting to CV</title>
+    <meta charset="UTF-8">
+    <title>CV Pablo Bernabeu</title>
+    <meta http-equiv="refresh" content="0; url=../cv-pablo-bernabeu.pdf">
   </head>
 </html>
