--- a/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
+++ b/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
@@ -772,13 +772,12 @@
     <div class="article-style">
 
 
+<div id="read-the-preregistration" class="section level3">
+<h3>  <i class="fa fa-file"></i>  <a href='https://osf.io/6pxj4'>Read the preregistration</a></h3>
+</div>
 <div id="reference" class="section level3">
 <h3>Reference</h3>
 <p>González Alonso, J., Bernabeu, P., Silva, G., DeLuca, V., Poch, C., Ivanova, I., &amp; Rothman, J. (2024). Starting from the very beginning: Unraveling third language (L3) development with longitudinal data from artificial language learning and related epistemology. <em>International Journal of Multilingualism, 1</em>(22). <a href="https://doi.org/10.1080/14790718.2024.2415993" class="uri">https://doi.org/10.1080/14790718.2024.2415993</a></p>
-</div>
-<div id="preregistration" class="section level3">
-<h3>Preregistration</h3>
-<p>Available at <a href="https://osf.io/6pxj4" class="uri">https://osf.io/6pxj4</a>.</p>
 </div>
 <div id="materials" class="section level3">
 <h3>Materials</h3>
