--- a/publication/chen-etal-inprep/index.html
+++ b/publication/chen-etal-inprep/index.html
@@ -720,7 +720,7 @@
   
     
   
-  <a class="btn btn-outline-primary my-1 mr-1" href="https://osf.io/6pxj4" target="_blank" rel="noopener">
+  <a class="btn btn-outline-primary my-1 mr-1" href="https://osf.io/preprints/psyarxiv/t2pjv_v1" target="_blank" rel="noopener">
     
     Preregistration
   </a>
