--- a/publication/index.html
+++ b/publication/index.html
@@ -862,7 +862,7 @@
   
     
   
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/6pxj4" target="_blank" rel="noopener">
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/preprints/psyarxiv/t2pjv_v1" target="_blank" rel="noopener">
     
     Preregistration
   </a>
