--- a/publication/index.html
+++ b/publication/index.html
@@ -1048,7 +1048,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/download/97u5c" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/Pablo_Bernabeu_PhD_thesis_2022.pdf" target="_blank" rel="noopener">
   <i class="fa fa-file-pdf"></i> PDF
 </a>
 
