--- a/publication/pablo-bernabeu-2022-phd-thesis/index.html
+++ b/publication/pablo-bernabeu-2022-phd-thesis/index.html
@@ -663,7 +663,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://osf.io/download/97u5c" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="/Pablo_Bernabeu_PhD_thesis_2022.pdf" target="_blank" rel="noopener">
   <i class="fa fa-file-pdf"></i> PDF
 </a>
 
@@ -766,7 +766,7 @@
     
 
     
-    <a href=https://osf.io/download/97u5c>
+    <a href=/Pablo_Bernabeu_PhD_thesis_2022.pdf>
       <button style = "background-color: white; color: black; border: 2px solid #4CAF50; border-radius: 12px;">
       <h3 class="full-text" style = "margin-top: 7.5px !important; margin-left: 9px !important; margin-right: 9px !important;"> 
       Open full text
