--- a/index.html
+++ b/index.html
@@ -3630,16 +3630,10 @@
     
     
 
-    <div style="display: flex; justify-content: center; margin-bottom: 5%;">
-    <a href='/cv-pablo-bernabeu.pdf' style="display: block; width: 70%;">
-        <button style="background-color: #fff7ec; color: black; border: 2px solid #196F27; border-radius: 12px; width: 100%; padding: 6px;">
-            <h3 style="font-size: 140%; margin: 7px 9px !important; display: flex; align-items: center; justify-content: center;">
-                <i class="fa-regular fa-file" style="color:darkgrey;"></i> 
-                <span style="color: black; margin-left: 8px;">View CV</span>
-            </h3>
-        </button>
-    </a>
-</div>
+    <a href="/cv-pablo-bernabeu.pdf" class="cv-btn">
+  <i class="fa fa-file"></i> &nbsp;
+  <span>View <b>CV</b></span>
+</a>
 <p>After completing a research master's, I became a PhD student and graduate teaching assistant in Psychology at Lancaster University. In my <a href="/publication/pablo-bernabeu-2022-phd-thesis">thesis</a>, I investigated how conceptual processing—that is, the comprehension of the meaning of words—is supported by linguistic and sensorimotor brain systems, and how research on this topic is influenced by methodological aspects such as the operationalisation of variables and the sample size of experiments.</p>
 <p>Next, I completed a postdoctoral fellowship at UiT The Arctic University of Norway. I worked at the <a href="https://en.uit.no/enhet/isk">Department of Language and Culture</a>, and specifically within the <a href="https://site.uit.no/polar">PoLaR Lab</a> and <a href="https://uit.no/research/clabl"><span style = "white-space: nowrap;">C-LaBL</span></a>. As the local manager of the <a href="https://app.cristin.no/projects/show.jsf?id=2559611"><strong>LESS Project</strong> (Language Economy through Transfer Source Selectivity)</a>, I worked on a longitudinal study that investigates how bilingual people acquire an additional language, how this process is influenced by the characteristics of the languages, and how the process is instantiated in the brain. As part of this work, I contributed to designing our main study and developing materials in Norwegian and English, as well as creating materials in Spanish and English for a partner study in Spain. After documenting and pretesting these materials, I prepared a preregistration for the studies. Additionally, I recruited participants, designed the protocol for electroencephalography (EEG) sessions, and trained students and research assistants in both the protocol and EEG methodology more broadly. I also established and managed an EEG lab, conducted numerous sessions, supervised those led by research assistants, and monitored participants&rsquo; longitudinal progress. Moreover, I presented the study design at conferences and collaborated with research assistants to preprocess, visualise and analyse EEG and behavioural data.</p>
 <p>I am also interested in the relationships between language and other cognitive domains, as well as in the origins and evolution of language.</p>
@@ -4019,6 +4013,7 @@
 </tr>
 </tbody>
 </table>
+<div style="margin-top: 50px;"></div>
 <h2 id="teaching-philosophy"><strong>Teaching Philosophy</strong></h2>
 <p>My teaching experiences have honed my ability to create a collaborative and engaging learning environment, where students are encouraged to think critically and apply their knowledge effectively. As a result, my teaching approach ensures that students not only acquire foundational knowledge but also develop the skills necessary to excel in their academic and professional endeavours. To this end, I draw on a range of applications that foster participation and collaboration, including Miro, Vevox, MS Teams, Google Docs, etc.</p>
 <p>I have been guided by a few core principles that are outlined below.</p>
