--- a/publication/bernabeu_vogt2015/index.html
+++ b/publication/bernabeu_vogt2015/index.html
@@ -712,10 +712,10 @@
 
     
     <a href=https://www.researchgate.net/profile/Pablo_Bernabeu3/publication/280858062_Language_evolution_Current_status_and_future_directions/links/59309ba2a6fdcc89e784596c/Language-evolution-Current-status-and-future-directions.pdf>
-      <button style = "background-color: white; color: black; border: 2px solid #4CAF50; border-radius: 12px;">
-      <h3 class="full-text" style = "margin-top: 7.5px !important; margin-left: 9px !important; margin-right: 9px !important;"> 
-      Open full text
-      </h3></button>
+      <button class="full-text-btn">
+        <i class="fa fa-file" style='color:grey;'></i> &nbsp;&nbsp; 
+        <span>View <b>full text</b></span>
+      </button>
       </a>
     
 
