--- a/publication/bernabeu-tillman-2019/index.html
+++ b/publication/bernabeu-tillman-2019/index.html
@@ -726,10 +726,10 @@
 
     
     <a href=https://doi.org/10.1075/dujal.15019.ber>
-      <button style = "background-color: white; color: black; border: 2px solid #4CAF50; border-radius: 12px;">
-      <h3 class="full-text" style = "margin-top: 7.5px !important; margin-left: 9px !important; margin-right: 9px !important;"> 
-      Open full text
-      </h3></button>
+      <button class="full-text-btn">
+        <i class="fa fa-file" style='color:grey;'></i> &nbsp;&nbsp; 
+        <span>View <b>full text</b></span>
+      </button>
       </a>
     
 
