--- a/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
+++ b/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
@@ -762,10 +762,10 @@
 
     
     <a href=https://www.tandfonline.com/doi/epdf/10.1080/14790718.2024.2415993>
-      <button style = "background-color: white; color: black; border: 2px solid #4CAF50; border-radius: 12px;">
-      <h3 class="full-text" style = "margin-top: 7.5px !important; margin-left: 9px !important; margin-right: 9px !important;"> 
-      Open full text
-      </h3></button>
+      <button class="full-text-btn">
+        <i class="fa fa-file" style='color:grey;'></i> &nbsp;&nbsp; 
+        <span>View <b>full text</b></span>
+      </button>
       </a>
     
 
