--- a/index.html
+++ b/index.html
@@ -4318,7 +4318,7 @@
 </tr>
 <tr>
 <td><strong>Web, data, AI and typesetting</strong></td>
-<td>HTML, CSS, Javascript, regular expressions, Git, Linux, high-performance computing, LaTeX, Zotero (e.g., <a href="https://github.com/pablobernabeu"><i class="fas fa-link"></i></a>). Basic Python, C, SQL, MediaPipe, Google Analytics</td>
+<td>HTML, CSS, Javascript, regular expressions, Git, bash, Linux, high-performance computing, LaTeX, Zotero (e.g., <a href="https://github.com/pablobernabeu"><i class="fas fa-link"></i></a>). Basic Python, C, SQL, MediaPipe, Google Analytics</td>
 </tr>
 <tr>
 <td><strong>Business and administration</strong></td>
