--- a/applications-and-dashboards/bernabeu-etal-2017-modalityswitch/index.html
+++ b/applications-and-dashboards/bernabeu-etal-2017-modalityswitch/index.html
@@ -599,7 +599,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1" href="https://psyarxiv.com/a5pcz" target="_blank" rel="noopener">
-  <i class="fa fa-file-pdf"></i> PDF
+  <i class="fa fa-file-pdf"></i> Full text
 </a>
 
 
