--- a/publication/bernabeu_vogt2015/index.html
+++ b/publication/bernabeu_vogt2015/index.html
@@ -664,7 +664,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1" href="https://www.researchgate.net/profile/Pablo_Bernabeu3/publication/280858062_Language_evolution_Current_status_and_future_directions/links/59309ba2a6fdcc89e784596c/Language-evolution-Current-status-and-future-directions.pdf" target="_blank" rel="noopener">
-  <i class="fa fa-file-pdf"></i> PDF
+  <i class="fa fa-file-pdf"></i> Full text
 </a>
 
 
