--- a/publication/language-vision-conceptual-processing/index.html
+++ b/publication/language-vision-conceptual-processing/index.html
@@ -664,7 +664,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1" href="https://osf.io/dnskh" target="_blank" rel="noopener">
-  <i class="fa fa-file-pdf"></i> PDF
+  <i class="fa fa-file-pdf"></i> Full text
 </a>
 
 
