--- a/publication/pablo-bernabeu-2022-phd-thesis/index.html
+++ b/publication/pablo-bernabeu-2022-phd-thesis/index.html
@@ -664,7 +664,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1" href="/Pablo_Bernabeu_PhD_thesis_2022.pdf" target="_blank" rel="noopener">
-  <i class="fa fa-file-pdf"></i> PDF
+  <i class="fa fa-file-pdf"></i> Full text
 </a>
 
 
