--- a/publication/bernabeu-tillman-2019/index.html
+++ b/publication/bernabeu-tillman-2019/index.html
@@ -666,7 +666,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1075/dujal.15019.ber" target="_blank" rel="noopener">
-  <i class="fa fa-file-pdf"></i> PDF
+  <i class="fa fa-file-pdf"></i> Full text
 </a>
 
 
