--- a/publication/chen-etal-inprep/index.html
+++ b/publication/chen-etal-inprep/index.html
@@ -658,7 +658,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.31219/osf.io/2qf6w" target="_blank" rel="noopener">
-  <i class="fa fa-file-pdf"></i> PDF
+  <i class="fa fa-file-pdf"></i> Full text
 </a>
 
 
