--- a/publication/index.html
+++ b/publication/index.html
@@ -677,7 +677,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://www.tandfonline.com/doi/epdf/10.1080/14790718.2024.2415993" target="_blank" rel="noopener">
-  <i class="fa fa-file-pdf"></i> PDF
+  <i class="fa fa-file-pdf"></i> Full text
 </a>
 
 
@@ -800,7 +800,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.31219/osf.io/2qf6w" target="_blank" rel="noopener">
-  <i class="fa fa-file-pdf"></i> PDF
+  <i class="fa fa-file-pdf"></i> Full text
 </a>
 
 
@@ -919,7 +919,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/dnskh" target="_blank" rel="noopener">
-  <i class="fa fa-file-pdf"></i> PDF
+  <i class="fa fa-file-pdf"></i> Full text
 </a>
 
 
@@ -1049,7 +1049,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/Pablo_Bernabeu_PhD_thesis_2022.pdf" target="_blank" rel="noopener">
-  <i class="fa fa-file-pdf"></i> PDF
+  <i class="fa fa-file-pdf"></i> Full text
 </a>
 
 
@@ -1179,7 +1179,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/ftydw/" target="_blank" rel="noopener">
-  <i class="fa fa-file-pdf"></i> PDF
+  <i class="fa fa-file-pdf"></i> Full text
 </a>
 
 
@@ -1258,7 +1258,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1075/dujal.15019.ber" target="_blank" rel="noopener">
-  <i class="fa fa-file-pdf"></i> PDF
+  <i class="fa fa-file-pdf"></i> Full text
 </a>
 
 
@@ -1345,7 +1345,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.31234/osf.io/s2c5h" target="_blank" rel="noopener">
-  <i class="fa fa-file-pdf"></i> PDF
+  <i class="fa fa-file-pdf"></i> Full text
 </a>
 
 
@@ -1456,7 +1456,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.31234/osf.io/a5pcz" target="_blank" rel="noopener">
-  <i class="fa fa-file-pdf"></i> PDF
+  <i class="fa fa-file-pdf"></i> Full text
 </a>
 
 
@@ -1629,7 +1629,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.31234/osf.io/5gjvk" target="_blank" rel="noopener">
-  <i class="fa fa-file-pdf"></i> PDF
+  <i class="fa fa-file-pdf"></i> Full text
 </a>
 
 
@@ -1786,7 +1786,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://www.researchgate.net/profile/Pablo_Bernabeu3/publication/280858062_Language_evolution_Current_status_and_future_directions/links/59309ba2a6fdcc89e784596c/Language-evolution-Current-status-and-future-directions.pdf" target="_blank" rel="noopener">
-  <i class="fa fa-file-pdf"></i> PDF
+  <i class="fa fa-file-pdf"></i> Full text
 </a>
 
 
