--- a/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
+++ b/publication/third-language-longitudinal-data-artificial-language-learning-eeg/index.html
@@ -666,7 +666,7 @@
 
 
 <a class="btn btn-outline-primary my-1 mr-1" href="https://www.tandfonline.com/doi/epdf/10.1080/14790718.2024.2415993" target="_blank" rel="noopener">
-  <i class="fa fa-file-pdf"></i> PDF
+  <i class="fa fa-file-pdf"></i> Full text
 </a>
 
 
